--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,5 @@ theme: jekyll-theme-minimal
 
 title: Francois R Foerster, PhD
 description: Hi!
+![Profil picture](/francoisrfoerster.github.io/assets/logo.png)
 
