--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ theme: jekyll-theme-minimal
 
 title: Francois R Foerster, PhD
 description: Hi!
-![Profil picture](/francoisrfoerster.github.io/assets/logo.png)
+![Profil picture](/francoisrfoerster.github.io/assets/francois.jpg)
 
