--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 
 title: Francois R Foerster, PhD
-description: Hi!
+description: Ciao!
 ![Profil picture](/francoisrfoerster.github.io/assets/francois.jpg)
 
