--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 theme: jekyll-theme-minimal
 
 title: Francois R Foerster, PhD
-description: Ciao!
-![Profil picture](/francoisrfoerster.github.io/assets/francois.jpg)
+description: ![Profil picture](/francoisrfoerster.github.io/assets/francois.jpg)
 
