--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 theme: jekyll-theme-minimal
 
 title: Francois R Foerster, PhD
-description: ![Profil picture](/francoisrfoerster.github.io/docs/assets/francois.jpg)
+description: text
 
+![Profil picture](/francoisrfoerster.github.io/docs/assets/francois.jpg)
