--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 
 title: Francois R Foerster, PhD
-description: ![ProfilPicture](/francoisrfoerster.github.io/docs/assets/francois.jpg){:width="300px"}
+![ProfilPicture](/francoisrfoerster.github.io/docs/assets/francois.jpg){:width="300px"}
