--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ title: Francois R Foerster, PhD
 
 description: 
 
-![ProfilPicture](/francoisrfoerster.github.io/docs/assets/francois.jpg){:width="300px"}
+![ProfilPicture](/francoisrfoerster.github.io/docs/assets/francois.jpg)
