--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ theme: jekyll-theme-minimal
 
 title: Francois R Foerster, PhD
 
-description: 
+description: Cognitive neuroscientists
 
-![ProfilPicture](/francoisrfoerster.github.io/docs/assets/francois.jpg)
+avatar: ![ProfilPicture](/francoisrfoerster.github.io/docs/assets/francois.jpg)
