--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: Francois R Foerster, PhD
 
 description: Cognitive neuroscientist
 
-avatar: ![ProfilPicture](/francoisrfoerster.github.io/docs/assets/francois.jpg)
+avatar: ![ProfilPicture](/francoisrfoerster.github.io/docs/assets/Francois.jpg)
 
 
 # Includes an icon in the footer for each username you enter
