--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: Francois R. Foerster, PhD
 
 description: Cognitive neuroscientist
 
-avatar: https://francoisrfoerster.github.io/docs/assets/plymouthLogo.png
+avatar: ![avatar](/francoisrfoerster.github.io/docs/assets/francois.jpg){:width="150px"}
 
 # Includes an icon in the footer for each username you enter
 footer-links:
