--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,8 @@ title: Francois R. Foerster, PhD
 
 description: Cognitive neuroscientist
 
-
+avatar:
+  
   ![avatar](/francoisrfoerster.github.io/docs/assets/francoisfoersterBis.png){:width="300px"}
 
 # Includes an icon in the footer for each username you enter
