--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,7 @@ title: Francois R. Foerster, PhD
 
 description: Cognitive neuroscientist
 
-avatar:
-  
-  ![avatar](/francoisrfoerster.github.io/docs/assets/francoisfoersterBis.png){:width="300px"}
+avatar: /francoisrfoerster.github.io/docs/assets/francoisfoersterBis.png
 
 # Includes an icon in the footer for each username you enter
 footer-links:
