--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ description: Cognitive Neuroscientist & EEG Consultant
 
 avatar: https://francoisfoerster.github.io/francoisrfoerster.github.io/docs/assets/francoisfoersterBis.png
 
+  ![profil](/francoisrfoerster.github.io/docs/assets/francoisfoersterBis.png){:width="500px"}
+
 # Includes an icon in the footer for each username you enter
 footer-links:
   email: francoisfoerster@gmail.com
