--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 url: https://francoisfoerster.github.io
-baseurl: ''
+baseurl: 'francoisfoerster.github.io'
 
 title: Dr. Francois R. Foerster
 
